# wafa

./: .dockerignore  .env.sample  .gitignore  Procfile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml  requirements.txt  sample.config.yml  serverless.yml
advertising/: admin.py  models.py
advertising/migrations/: 0001_initial.py  0002_auto_20200315_2257.py  0003_alter_advertising_id_alter_imageadvertising_id.py
advertising/templatetags/: image.py
contact/: models.py  views.py
contact/migrations/: 0001_initial.py  0002_alter_contactpage_page_ptr.py
docker/postgres/docker-entrypoint-initdb.d/: init-user-db.sh
docker/wafa/: Dockerfile  entrypoint.sh
event/: feeds.py  managers.py  models.py  routes.py  urls.py  views.py
event/migrations/: 0001_initial.py  0002_auto_20170331_0016.py  0003_auto_20170404_1751.py  0004_auto_20200315_2257.py  0005_alter_eventpage_page_ptr_alter_tageventpage_tag.py  0006_alter_category_id_alter_categoryeventpage_id_and_more.py
home/: models.py  urls.py  views.py
home/entities/: blocks.py
home/migrations/: 0001_initial.py  0002_aboutpage_countries.py  0002_auto_20170309_2234.py  0002_auto_20170313_1621.py  0003_aboutpage.py  0003_auto_20170315_1528.py  0003_auto_20170331_0025.py  0004_auto_20170331_1309.py  0004_productpage.py  0004_remove_aboutpage_members.py  0005_auto_20170323_0441.py  0005_auto_20170406_1131.py  0006_auto_20200315_2257.py  0007_auto_20200316_1550.py  0008_auto_20200316_1559.py  0009_alter_aboutpage_page_image_alter_aboutpage_page_ptr_and_more.py  0010_memberpage_executive_officers_and_more.py
home/templates/home/: about_page.html  home_page.html  member_page.html  product_page.html
home/templates/tags/: slider.html
home/templatetags/: home_tags.py
locale/fr/LC_MESSAGES/: django.mo  django.po
puput/: __init__.py  abstracts.py  feeds.py  managers.py  models.py  routes.py  urls.py  utils.py  views.py
puput/management/commands/: puput_initial_data.py
puput/migrations/: 0001_initial.py  0002_auto_20200315_2257.py  0003_alter_tagentrypage_tag.py  0004_alter_category_id_alter_categoryentrypage_id_and_more.py  0004_auto_20170323_0108.py
puput/templates/el_pagination/: current_link.html  page_link.html
puput/templatetags/: puput_tags.py
search/: views.py
wafa/: models.py  urls.py  wsgi.py
wafa/settings/: base.py  dev.py  production.py
wafa/static/css/: camera.css  custom.css  dark.css  elastic.css  orgchart.style.css  responsive.css  settings.css  style.css  wafa.css
wafa/static/js/: blog.script.js  contact.script.js  functions.js  member.script.js  orgchart.script.js  (+2 more)
wafa/templates/: 404.html  500.html  base.html  blog.html  event.html
wafa/templatetags/: event_tags.py  home_tags.py  wafa_tags.py
(+50 files in other folders)
