[project]
name = "wafa"
version = "0.1.0"
description = ""
authors = [
    {name = "Sega Diop",email = "sega.diop@madi-corp.net"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "anyascii (>=0.3.1,<0.4.0)",
    "appdirs (>=1.4.4,<1.5.0)",
    "asgiref (>=3.8.1,<3.9.0)",
    "beautifulsoup4 (>=4.11.1,<4.12.0)",
    "boto3 (>=1.35.65,<1.36.0)",
    "botocore (>=1.35.65,<1.36.0)",
    "certifi (>=2022.12.7,<2022.13.0)",
    "charset-normalizer (>=3.0.1,<3.1.0)",
    "dj-database-url (>=2.3.0,<2.4.0)",
    "dj-static (>=0.0.6,<0.1.0)",
    "django (>=5.1.2,<5.2.0)",
    "django-appconf (>=1.0.5,<1.1.0)",
    "django-compat (>=1.0.15,<1.1.0)",
    "django-compressor (>=4.3,<5.0)",
    "django-el-pagination (>=3.1.0,<3.2.0)",
    "django-filter (>=24.3,<25.0)",
    "django-generic-positions (>=0.2.3,<0.3.0)",
    "django-location-field (>=2.1.0,<2.2.0)",
    "django-modelcluster (>=6.0,<7.0)",
    "django-permissionedforms (>=0.1,<1.0)",
    "django-photologue (>=3.17,<4.0)",
    "django-social-share (>=2.3.0,<2.4.0)",
    "django-sortedm2m (>=4.0.0,<4.1.0)",
    "django-storages (>=1.14.4,<1.15.0)",
    "django-taggit (>=5.0,<6.0)",
    "django-treebeard (>=4.6.0,<4.7.0)",
    "djangorestframework (>=3.15.2,<3.16.0)",
    "docutils (>=0.19,<1.0)",
    "draftjs-exporter (>=2.1.7,<2.2.0)",
    "et-xmlfile (>=1.1.0,<1.2.0)",
    "exifread (>=3.0.0,<3.1.0)",
    "futures (>=3.0.5,<3.1.0)",
    "gunicorn (>=20.1.0,<20.2.0)",
    "html5lib (>=1.1,<2.0)",
    "idna (>=3.4,<4.0)",
    "jmespath (>=1.0.1,<1.1.0)",
    "l18n (>=2021.3,<2022.0)",
    "load-dotenv (>=0.1.0,<0.2.0)",
    "marshmallow (>=3.19.0,<3.20.0)",
    "olefile (>=0.46,<1.0)",
    "openpyxl (>=3.0.10,<3.1.0)",
    "packaging (>=23.0,<24.0)",
    "pillow (>=10.4.0,<10.5.0)",
    "psycopg2 (>=2.9.5,<2.10.0)",
    "pyparsing (>=3.0.9,<3.1.0)",
    "python-dateutil (>=2.8.2,<2.9.0)",
    "python-dotenv (>=0.21.1,<0.22.0)",
    "pytz (>=2022.7.1,<2022.8.0)",
    "pyyaml (>=6.0,<7.0)",
    "rcssmin (>=1.1.1,<1.2.0)",
    "requests (>=2.28.2,<2.29.0)",
    "rjsmin (>=1.2.1,<1.3.0)",
    "s3transfer (>=0.10.3,<0.11.0)",
    "six (>=1.16.0,<1.17.0)",
    "soupsieve (>=2.3.2.post1,<2.4.0)",
    "sqlparse (>=0.4.3,<0.5.0)",
    "static3 (>=0.7.0,<0.8.0)",
    "telepath (>=0.3,<1.0)",
    "unidecode (>=1.3.6,<1.4.0)",
    "urllib3 (>=1.26.14,<1.27.0)",
    "wagtail (>=6.2.2,<6.3.0)",
    "webencodings (>=0.5.1,<0.6.0)",
    "whitenoise (>=6.3.0,<6.4.0)",
    "willow (>=1.10.0,<1.11.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
